upgrade to java 17 for bridge